@@ -1,3 +1,10 @@
+2012-11-02 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.h
+	* DBSoap.m
+	* DBSoapCSV.m
+	Initial work on multi-key identify. Not working, but single-key remains preserved.
+
 2012-10-31 Riccardo Mottola <rm@gnu.org>
 
 	* DBProgress.h
